objects/Pending_Correction_Reason__c.object
<CustomObject>
    <fields>
        <fullName>Completed_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Corrected Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Correction_Comments__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Correction Comments</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Correction_Department__c</fullName>
        <formula>TEXT(Pending_Correction__r.Correction_Department__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Correction Department</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Implementation_Case__c</fullName>
        <formula>HYPERLINK(Pending_Correction__r.Implementation_Case__r.Id,Pending_Correction__r.Implementation_Case__r.OrderNumber )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Implementation Case</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Initiator_Comments__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Initiator Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pending_Correction_Action_Completed_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Pending Correction Action Completed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Pending_Correction_Stage__c</fullName>
        <label>Pending Correction Stage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending Correction Action</fullName>
                    <default>true</default>
                    <label>Pending Correction Action</label>
                </value>
                <value>
                    <fullName>Corrected</fullName>
                </value>
                <value>
                    <fullName>Cannot Correct At This Time</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pending_Correction__c</fullName>
        <label>Pending Correction</label>
        <referenceTo>Pending_Correction__c</referenceTo>
        <relationshipLabel>Pending Correction Reasons</relationshipLabel>
        <relationshipName>Pending_Correction_Reasons</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Reason__c</fullName>
        <label>SubType/Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Type__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Benefit booklets on draft</fullName>
                </value>
                <value>
                    <fullName>Benefit discrepancies - Sales is verifying</fullName>
                </value>
                <value>
                    <fullName>Bill Entity Eff Date</fullName>
                </value>
                <value>
                    <fullName>Billing Address</fullName>
                </value>
                <value>
                    <fullName>Billing Issues</fullName>
                </value>
                <value>
                    <fullName>Case Eff Date</fullName>
                </value>
                <value>
                    <fullName>Census</fullName>
                </value>
                <value>
                    <fullName>Clarification Due to Discrepancy of Info/Paper Work</fullName>
                </value>
                <value>
                    <fullName>Clarification Group Level Paperwork</fullName>
                </value>
                <value>
                    <fullName>Clarification of voucher</fullName>
                </value>
                <value>
                    <fullName>COBRA</fullName>
                </value>
                <value>
                    <fullName>Company Address</fullName>
                </value>
                <value>
                    <fullName>Contract Code / BPL Update with Future Date</fullName>
                </value>
                <value>
                    <fullName>Contract Code to Move to Production Due to BC Error</fullName>
                </value>
                <value>
                    <fullName>Contracts Internal Only</fullName>
                </value>
                <value>
                    <fullName>Discrepencies</fullName>
                </value>
                <value>
                    <fullName>Discrepency</fullName>
                </value>
                <value>
                    <fullName>E&amp;B Internal Only</fullName>
                </value>
                <value>
                    <fullName>Eligibility Incomplete</fullName>
                </value>
                <value>
                    <fullName>Eligibility Not Received</fullName>
                </value>
                <value>
                    <fullName>Enrollment</fullName>
                </value>
                <value>
                    <fullName>Enrollment Forms</fullName>
                </value>
                <value>
                    <fullName>External Contact Incomplete</fullName>
                </value>
                <value>
                    <fullName>External Contact Missing</fullName>
                </value>
                <value>
                    <fullName>Focal Renewal Date</fullName>
                </value>
                <value>
                    <fullName>Funding documents on draft</fullName>
                </value>
                <value>
                    <fullName>Health and Wellness Healthcare (HIP)</fullName>
                </value>
                <value>
                    <fullName>Incomplete</fullName>
                </value>
                <value>
                    <fullName>Incorrect</fullName>
                </value>
                <value>
                    <fullName>Internal Case Install Only</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Address</fullName>
                </value>
                <value>
                    <fullName>Alpha Prefix</fullName>
                </value>
                <value>
                    <fullName>ASO Funding Doc</fullName>
                </value>
                <value>
                    <fullName>ASO or ABF Finance Forms</fullName>
                </value>
                <value>
                    <fullName>ASO or ABF Stoploss Form</fullName>
                </value>
                <value>
                    <fullName>Benefit Summaries</fullName>
                </value>
                <value>
                    <fullName>Billing</fullName>
                </value>
                <value>
                    <fullName>Broker</fullName>
                </value>
                <value>
                    <fullName>Calcobra</fullName>
                </value>
                <value>
                    <fullName>Case Name</fullName>
                </value>
                <value>
                    <fullName>Case Number</fullName>
                </value>
                <value>
                    <fullName>CDH Questionaire</fullName>
                </value>
                <value>
                    <fullName>Contact</fullName>
                </value>
                <value>
                    <fullName>Contract Code</fullName>
                </value>
                <value>
                    <fullName>Contribution</fullName>
                </value>
                <value>
                    <fullName>Domestic Partners</fullName>
                </value>
                <value>
                    <fullName>EAP</fullName>
                </value>
                <value>
                    <fullName>Effective Date</fullName>
                </value>
                <value>
                    <fullName>Eligibility</fullName>
                </value>
                <value>
                    <fullName>Employer App</fullName>
                </value>
                <value>
                    <fullName>Group Structure</fullName>
                </value>
                <value>
                    <fullName>ID Cards</fullName>
                </value>
                <value>
                    <fullName>Life and Disability</fullName>
                </value>
                <value>
                    <fullName>MBU</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Perform Guarantee</fullName>
                </value>
                <value>
                    <fullName>Pharmacy</fullName>
                </value>
                <value>
                    <fullName>Phone Number</fullName>
                </value>
                <value>
                    <fullName>Probationary Period</fullName>
                </value>
                <value>
                    <fullName>Proposal/Rate Sheet</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Pending Correction Reason</label>
    <nameField>
        <displayFormat>PCR-{0000}</displayFormat>
        <label>Pending Corrections Reason Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pending Correction Reasons</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>